--- a/public/index.html
+++ b/public/index.html
@@ -12,6 +12,7 @@
     <!-- Font Awesome -->
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=EB+Garamond:wght@500;700&display=swap" rel="stylesheet">
+    <link rel="icon" href="assets/logo.png" type="image/png" />
 
     <!-- Custom CSS -->
     <link rel="stylesheet" href="css/styles.css" />
