--- a/public/room.html
+++ b/public/room.html
@@ -9,6 +9,7 @@
     <!-- Bootstrap & Font Awesome -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" />
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" rel="stylesheet" />
+    <link rel="icon" href="assets/logo.png" type="image/png" />
 
     <!-- Custom CSS -->
     <link rel="stylesheet" href="css/room.css" />
